--- a/src/App.css
+++ b/src/App.css
@@ -142,3 +142,12 @@
 .trending h1{
   font-size: 30px;
 }
+
+.continue-watching{
+  padding: 0px;
+  padding-left: 30px;
+}
+
+.continue-watching h1{
+  font-size: 30px;
+}
